# zkpnft

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  verification_hash.py
image/: metadata.json
tests/: test_zkp.py
verification/: package-lock.json  package.json  truffle-config-polygon.js  truffle-config.js
verification/contracts/polygon/: VerifierNFT.sol
verification/migrations/: 1_deploy_polygon_verifier.js
